# GeneralChatBot

./: CMakeLists.txt  GermanStopWords.txt  README.md  reduce_german_nouns_file_size.py  script_replace_umlauts.sh
data/: GermanNounsProper.csv  classes.csv  train.csv
src/: HandleGermanText.cpp  HandleGermanText.h  HandleText.cpp  HandleText.h  chatbot.cpp  chatbot.h  chatgui.cpp  chatgui.h  chatlogic.cpp  chatlogic.h
